--- a/index.html
+++ b/index.html
@@ -1,22 +1,180 @@
 <!DOCTYPE html>
 <html>
-<head>
-	  <meta charset="UTF-8">
-  <title>Jour 1</title>
-</head>
-<body>
-<h1>Repetto Paris</h1>
-  <h2>Accompagnateur de mouvements depuis 1947</h2>
-  <h3>Présentation</h3>
-<p><strong>Les muffins</strong> sont de petits gâteaux individuels s'apparentant aux <b>madeleines</b>. Apparus au pays de Galles aux alentours du XIe siècle, ils sont très répandus dans les pays anglo-saxons, principalement aux États-Unis. Le principe caractéristique de fabrication des muffins consiste à préparer le mélange des ingrédients liquides et celui des ingrédients secs séparément, puis à mélanger rapidement et grossièrement les deux préparations. Contrairement aux cupcakes, les muffins n’ont jamais de glaçage.
-<br>
-Les muffins sont traditionnellement sucrés. On peut les retrouver au chocolat (avec des pépites de chocolat) ou nature, mais il existe de nombreuses autres variétés : fraise, banane, framboise, orange, vanille, myrtille ou bleuets, etc.
-<br>
-Il existe également des muffins salés, les English muffins ou muffins anglais, ressemblant à des sortes de petites crêpes très épaisses, faits à partir de pâte levée. Ces muffins salés sont quelquefois faits avec de la farine complète. Ils sont notamment employés comme base de la préparation des 
-<i>"œufs Bénédicte"</i>.
-</p>
 
-</body>
+<head>
+    <meta charset="UTF-8">
+  <title>Jour 1</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+     <div class="navbar">
+    <img src="images/logo.png" class="logo">
+    <div class="links">
+      <a href="" class="link">Présentation</a>
+      <a href="" class="link">Team</a>
+      <a href="" class="link">Contact</a>
+    </div>
+  </div>
+
+  <div>
+    <center>
+<h1>Repetto Paris</h1>
+</center>
+ <h2>Accompagnateur de mouvements depuis 1947</h2>
+
+
+ <div class="box">
+ <h2>QUE SERAIT LA VIE SANS LIBERTÉ ?</h2>
+
+<p>
+Entre vertige et apesanteur, la nouvelle campagne Repetto est une ode à la liberté.
+« C’est toute la philosophie de Repetto qui se retrouve dans ces images, en écho à la fibre émotionnelle du moment que nous venons de vivre.
+C’est une ode à la liberté retrouvée. » - Jean-Marc Gaucher, CEO de Repetto.
+</p>
+</div>
+</i>.
+  <img src="images/danse.jpg" alt="danse" width="500px"> 
+   <br>
+   </div>
+
+
+  <h3>Présentation</h3>
+<p><strong>Repetto</strong> est une marque française de chassures de danse créée en 1947. Après le succès international des ballerines et le développement d'une ligne de maroquinerie en 2011, elle lance l'année suivante une ligne de prêt-à-porter et en 2013 signe un accord de licence exclusif avec Interparfums pour lancer son premier parfum. </p>
+  
+<br>
+
+<h3>Différents types de danses :</h3>
+<ul>
+  <li> Danse classique</li>
+  <li>Danse contemporaine</li>
+  <li>Danse orientale</li>
+  <li>Tango</li>
+  <li>Valse</li>
+  <li>Danse irlandaise</li>
+</ul>
+
+
+ 
+  <h3> Histoire de la marque </h3>
+
+  Rose Repetto crée en 1947, à la demande de son fils Roland Petit, alors jeune danseur, qui revient courbatu de ses cours, souvent épuisé et parfois même rougi de filets de sang au niveau de ses pieds, des chaussons plus adaptés. Bonne couturière, elle décide de concevoir un chausson qui permettrait une plus grande aisance dans la pratique de ce sport, grâce à sa technique du « cousu-retourné » (la semelle en cuir est cousue à l’envers avant d’être retournée). Elle délaisse alors son métier de bistrotière pour ouvrir un atelier près de l’Opéra de Paris, où elle crée ses premières pointes révolutionnaires.<br>
+
+<h3>L'art de la danse</h3>
+
+<br>
+
+<div class="video">
+<iframe width="572" height="322" src="https://www.youtube.com/embed/0dehb1YKqB0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<br>
+<br>
+<br>
+
+<div class="map">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d84048.25726512974!2d2.219697606960225!3d48.82944738643715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e30e4f3ae9f%3A0xc181bb5394e1e2c7!2sREPETTO!5e0!3m2!1sfr!2sfr!4v1623311666613!5m2!1sfr!2sfr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+</div>
+
+<div class="contact">
+  <a href="https://www.repetto.fr" target="_blank" class="btn-pink">En savoir plus</a>
+
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
+        Contact
+      </button>
+</div>      
+
+<div class="modale">
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <h3 class="color-green">Louise Walczak</h3>
+              <p>contact@louisewalczakrepetto.com</p>
+              <div>
+                <a class="socials" href="">
+                  <i class="fab fa-facebook-square"></i>
+                </a>
+                <a class="socials" href="">
+                  <i class="fab fa-instagram"></i>
+                </a>
+                <a class="socials" href="">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+              </div>
+            </div>
+            <div class="modal-footer">
+            </div>
+          </div>
+        </div>
+      </div>
+</div>      
+
+    <div class="line-transparent">
+    <div class="line-hard"></div>
+    <div class="line-medium"></div>
+    <div class="line-light"></div>
+  </div>
+
+  <!-- Begin Mailchimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+  #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+  /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="https://hotmail.us6.list-manage.com/subscribe/post?u=49e77a0c9e7e283ed8007de20&amp;id=817932fb11" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+  <h2>Subscribe</h2>
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group">
+  <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+<div class="mc-field-group">
+  <label for="mce-FNAME">First Name </label>
+  <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+</div>
+<div class="mc-field-group">
+  <label for="mce-LNAME">Last Name </label>
+  <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+</div>
+<div class="mc-field-group size1of2">
+  <label for="mce-BIRTHDAY-month">Birthday </label>
+  <div class="datefield">
+    <span class="subfield monthfield"><input class="birthday " type="text" pattern="[0-9]*" value="" placeholder="MM" size="2" maxlength="2" name="BIRTHDAY[month]" id="mce-BIRTHDAY-month"></span> / 
+    <span class="subfield dayfield"><input class="birthday " type="text" pattern="[0-9]*" value="" placeholder="DD" size="2" maxlength="2" name="BIRTHDAY[day]" id="mce-BIRTHDAY-day"></span> 
+    <span class="small-meta nowrap">( mm / dd )</span>
+  </div>
+</div>  <div id="mce-responses" class="clear">
+    <div class="response" id="mce-error-response" style="display:none"></div>
+    <div class="response" id="mce-success-response" style="display:none"></div>
+  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_49e77a0c9e7e283ed8007de20_817932fb11" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+
+
+      </body>
 </html>
-<img src="images/danse.jpg" alt="danse">
+
+
+
+
 
