--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 </center>
  <h2>Accompagnateur de mouvements depuis 1947</h2>
 
+  <div class="line-transparent">
+    <div class="line-hard"></div>
+    <div class="line-medium"></div>
+    <div class="line-light"></div>
+  </div>
+
 
  <div class="box">
  <h2>QUE SERAIT LA VIE SANS LIBERTÉ ?</h2>
@@ -44,6 +50,12 @@ C’est une ode à la liberté retrouvée. » - Jean-Marc Gaucher, CEO de Repett
 
   <h3>Présentation</h3>
 <p><strong>Repetto</strong> est une marque française de chassures de danse créée en 1947. Après le succès international des ballerines et le développement d'une ligne de maroquinerie en 2011, elle lance l'année suivante une ligne de prêt-à-porter et en 2013 signe un accord de licence exclusif avec Interparfums pour lancer son premier parfum. </p>
+
+</div>
+</i>.
+  <img src="images/chaussons.jpg" alt="chaussons" width="500px"> 
+   <br>
+   </div>
   
 <br>
 
@@ -57,11 +69,23 @@ C’est une ode à la liberté retrouvée. » - Jean-Marc Gaucher, CEO de Repett
   <li>Danse irlandaise</li>
 </ul>
 
+</div>
+</i>.
+  <img src="images/groupe.jpg" alt="groupe" width="500px"> 
+   <br>
+   </div>
+
 
  
   <h3> Histoire de la marque </h3>
 
   Rose Repetto crée en 1947, à la demande de son fils Roland Petit, alors jeune danseur, qui revient courbatu de ses cours, souvent épuisé et parfois même rougi de filets de sang au niveau de ses pieds, des chaussons plus adaptés. Bonne couturière, elle décide de concevoir un chausson qui permettrait une plus grande aisance dans la pratique de ce sport, grâce à sa technique du « cousu-retourné » (la semelle en cuir est cousue à l’envers avant d’être retournée). Elle délaisse alors son métier de bistrotière pour ouvrir un atelier près de l’Opéra de Paris, où elle crée ses premières pointes révolutionnaires.<br>
+
+  </div>
+</i>.
+  <img src="images/ballet.jpg" alt="ballet" width="500px"> 
+   <br>
+   </div>
 
 <h3>L'art de la danse</h3>
 
